# vx-template-app

./: .env  .env.example  .gitignore  .graphqlrc  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker_postgres_init.sql  index.html  package.json  publish.sh  query.graphql  schema.graphql  update_schema.sh  vx-template-app.webmanifest
assets/css/: templatemo-scholar.css
crates/linea-academy/: Cargo.toml  index.html
crates/linea-academy/src/: config.rs  main.rs
crates/linea-academy/src/category/: mod.rs  model_category.rs  view_add_category.rs  view_delete_category.rs  view_show_category.rs  view_show_category_by_id.rs  view_update_category.rs
crates/linea-academy/src/components/: about.rs  banner.rs  categories.rs  categoryinfo.rs  categoryitem.rs  contact.rs  content.rs  contentitem.rs  courseitem.rs  courses.rs  facts.rs  footer.rs  header.rs  lastcourses.rs  mod.rs  modal.rs  preloader.rs  router.rs  team.rs
crates/linea-academy/src/course/: mod.rs  model_course.rs  view_add_course.rs  view_delete_course.rs  view_show_content_by_course.rs  view_show_content_by_id.rs  view_show_course_by_id.rs  view_show_courses.rs
hasura/: config.yaml
keycloak/: master-realm.json
keycloak/config/: standalone-ha.xml
odoo/addons/auth_oauth_keycloak/: __manifest__.py
odoo/config/: odoo.conf
src/: auth.rs  config.rs  main.rs
src/graphql/: graphql_service.rs  mod.rs  protocol.rs
src/hasura/: graphql_service.rs  hasura-ws.min.js  mod.rs  request.rs  subscribe.rs  subscription.js
src/test/: model.rs  view.rs
(+20 files in other folders)
